--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
       </div>
       <div id="navbar" class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
-          <li><a href="#legendModal" data-toggle="modal" data-target="#legendModal" class="btn btn-default">Legend</a></li>
-          <li><a href="#helpModal" data-toggle="modal" data-target="#helpModal" class="btn btn-default">Help</a></li>
+          <li><a href="#legendModal" data-toggle="modal" data-target="#legendModal" class="btn btn-primary">Legend</a></li>
+          <li><a href="#helpModal" data-toggle="modal" data-target="#helpModal" class="btn btn-primary">Help</a></li>
         </ul>
       </div><!--/.nav-collapse -->
     </div>
