adjust trail alignments, fix some styling

--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
         <div id="trailsLegend">
           <h5>Trails &amp; Paths</h5>
           <div>
-            <i class="legendIcon" id="potentialTrailFull"></i> Potential Trail (Full)
+            <i class="legendIcon" id="potentialTrailFull"></i> Primary Trail Alignment
             <br>
-            <i class="legendIcon" id="potentialTrailPart"></i>Potential Trail (Partial)
+            <i class="legendIcon" id="potentialTrailPart"></i>Spurs/Alternative Section Alignments
             <br>
             <i class="legendIcon" id="existingPaths"></i>Existing Paths
           </div>
